--- a/samples/bootstrap/code/index.html
+++ b/samples/bootstrap/code/index.html
@@ -7,9 +7,7 @@
   <title>Bootstrap</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-    crossorigin="anonymous">
+    rel="stylesheet">
 </head>
 <body>
   <div class="container position-relative vh-100">
@@ -19,9 +17,7 @@
   </div>
 
   <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous">
+    src="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/js/bootstrap.bundle.min.js">
   </script>
 </body>
 </html>
