fix: added missing script type for Fuse.js sample

--- a/samples/fusejs/code/index.html
+++ b/samples/fusejs/code/index.html
@@ -82,7 +82,7 @@
     </div>
   </div>
 
-  <script>
+  <script type="text/javascript">
     const list = ["Old Man's War", "The Lock Artist"];
 
     const options = {
