--- a/samples/soketi/client/index.html
+++ b/samples/soketi/client/index.html
@@ -143,7 +143,7 @@
         `<p><span>user-${event.sessionId}:</span> ${event.message}</p>`;
     });
 
-    document.querySelector('form').addEventListener("submit", (event) => {
+    document.querySelector('form').addEventListener('submit', (event) => {
       event.preventDefault();
 
       var headers = new Headers();
